--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -7,6 +7,10 @@
   box-sizing:         border-box;
 }
 
+#background-div {
+  background-color: #777777;
+}
+
 html {
   min-width: 1050px;
   overflow-x: scroll;
